add_library(gimic STATIC
    globals.f90
    getkw.f90  
    basis.f90
    bfeval.f90
    cao2sao.f90
    caos.f90
    d2fdrdb.f90
    dbop.f90
    dens.f90
    dfdb.f90
    dfdr.f90
    divj.f90
    edens.f90
    factorial.f90
    gaussint.f90
    gtodefs.f90
    intgrl.f90
    jtensor.f90
    kinds.f90
    lip.f90
    reorder.f90
    settings.f90
    teletype.f90
    tensor.f90
    timer.f90
    )
