include_directories(${CMAKE_CURRENT_SOURCE_DIR})

if (CYTHON_FOUND)
#    cython_add_module(connector
#        GimicInterface.pxd
#        GimicInterface.pyx 
#    )
#install(TARGETS GimicInterface 
#    RUNTIME DESTINATION bin
#    ARCHIVE DESTINATION lib
#    LIBRARY DESTINATION lib
#    )

endif()
